[feature] start script and custom validation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - DB_PASS=changeme
     depends_on:
       - db
+    restart: always
 
   db:
     image: postgres:13-alpine
@@ -30,6 +31,7 @@ services:
       - POSTGRES_PASSWORD=changeme
     ports:
       - "5432:5432"
+    restart: always
 
   caddy:
     image: caddy:latest
@@ -38,6 +40,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    restart: always
 
 volumes:
   db-data:
